# floatandplay

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  TASKS.md  index.html  mempalace.yaml  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts  vitest.config.ts
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: companion.rs  lib.rs  main.rs  proxy.rs  win_aspect.rs  ytdlp_types.rs
src-tauri/src/commands/: mod.rs  subtitles.rs  window.rs  ytdlp.rs
src/components/: Controls.tsx  Icons.tsx  PlaylistPanel.tsx  SettingsPanel.tsx  SubtitleOverlay.tsx  Toast.test.tsx  Toast.tsx  TopBar.tsx  VideoPlayer.tsx  VolumeBoosterPanel.tsx
src/lib/: audioBoost.ts  ipc.test.ts  ipc.ts  store.ts  subtitles.test.ts  subtitles.ts  url.test.ts  url.ts
src/styles/: main.css
